--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -2,25 +2,26 @@
 
 :root{
     --cor1: #F2F2F2;
-    --cor2: #D94A8C;
-    --cor3: #048ABF;
-    --cor4: #7CBF69;
-    --cor5: #D91414;
-    --cor6: #0D0D0D;
+    --cor2: #BCBCB6;
+    --cor3: #D94A8C;
+    --cor4: #048ABF;
+    --cor5: #7CBF69;
+    --cor6: #D91414;
+    --cor7: #0D0D0D;
 }
 
 body{
-    background-color: var(--cor4);
-    color: var(--cor6);
+    background-color: var(--cor5);
+    color: var(--cor7);
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body h1{
+#logo{
     text-align: center;
 }
 
 main{
-    background-color: var(--cor3);
+    background-color: var(--cor4);
     max-width: 800px;
     min-width: 400px;
     margin: auto;
@@ -34,6 +35,7 @@ main h2{
 
 main p{
     text-align: center;
+    padding-bottom: 5px;
 }
 
 main ul{
@@ -46,12 +48,14 @@ main ul{
     width: 400px;
     background-color: var(--cor1);
     margin: auto;
+    border-radius: 10px;
 }
 
 #resultado ul{
     columns: 1;
     text-align: left;
     padding-left: 10px;
+    color: var(--cor7);
 }
 
 #kwh{
