--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@font-face {
+    font-family: insanibu;
+    src: url('../Fontes/Insanibu.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: philosopher;
+    src: url('../Fontes/Philosopher-Regular.ttf') format('truetype');
+}
+
 :root{
     --cor1: #F2F2F2;
     --cor2: #BCBCB6;
@@ -13,49 +23,45 @@
 body{
     background-color: var(--cor5);
     color: var(--cor7);
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-#logo{
     text-align: center;
 }
 
 main{
     background-color: var(--cor4);
     max-width: 800px;
-    min-width: 400px;
+    min-width: 390px;
     margin: auto;
     border-radius: 10px;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.650);
+    font-family: philosopher, Arial, sans-serif;
 }
 
-main h2{
-    text-align: center;
+main h1{
+    font-family: insanibu, Arial, sans-serif;
+    font-size: 20pt;
 }
 
 main p{
-    text-align: center;
     padding-bottom: 5px;
 }
 
 main ul{
     list-style: none;
     columns: 2;
-    padding: auto;
+    text-align: left;
 }
 
 #resultado{
     width: 400px;
     background-color: var(--cor1);
-    margin: auto;
     border-radius: 10px;
+    margin: auto;
 }
 
-#resultado ul{
-    columns: 1;
-    text-align: left;
+#resultado ul{ 
+    columns: 1; 
     padding-left: 10px;
-    color: var(--cor7);
+    margin: auto;
 }
 
 #kwh{
