--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: insanibu;
-    src: url('../Fontes/Insanibu.ttf') format('truetype');
+    src: url('../fontes/Insanibu.ttf') format('truetype');
 }
 
 :root{
